--- a/CorredoresConsola/src/logica/PantallaPrincipalAltaCorredores.form
+++ b/CorredoresConsola/src/logica/PantallaPrincipalAltaCorredores.form
@@ -206,6 +206,9 @@
               <Dimension value="null"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButton4">
           <Properties>
