--- a/CorredoresConsola/src/logica/PantallaPrincipalAltaCorredores.form
+++ b/CorredoresConsola/src/logica/PantallaPrincipalAltaCorredores.form
@@ -178,9 +178,9 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="175" max="-2" attributes="0"/>
-                  <Component id="jButton3" max="32767" attributes="0"/>
+                  <Component id="jButtonAnadir" max="32767" attributes="0"/>
                   <EmptySpace min="-2" pref="85" max="-2" attributes="0"/>
-                  <Component id="jButton4" max="32767" attributes="0"/>
+                  <Component id="jButtonLimpiar" max="32767" attributes="0"/>
                   <EmptySpace min="-2" pref="189" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -190,8 +190,8 @@
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace min="-2" pref="67" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jButton3" alignment="3" max="32767" attributes="0"/>
-                      <Component id="jButton4" alignment="3" max="32767" attributes="0"/>
+                      <Component id="jButtonAnadir" alignment="3" max="32767" attributes="0"/>
+                      <Component id="jButtonLimpiar" alignment="3" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="61" max="-2" attributes="0"/>
               </Group>
@@ -199,22 +199,22 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JButton" name="jButton3">
+        <Component class="javax.swing.JButton" name="jButtonAnadir">
           <Properties>
             <Property name="text" type="java.lang.String" value="A&#xf1;adir"/>
             <Property name="actionCommand" type="java.lang.String" value="jButtonAnadir"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonAnadirActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton4">
+        <Component class="javax.swing.JButton" name="jButtonLimpiar">
           <Properties>
             <Property name="text" type="java.lang.String" value="Limpiar"/>
             <Property name="actionCommand" type="java.lang.String" value="jButtonLimpiar"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton4ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonLimpiarActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
